[package]
name = "kv-par-merge-sort"
version = "0.1.0"
edition = "2021"
description = "External sorting algorithm for (key, value) data sets."
authors = ["Duncan Fairbanks"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bonsairobo/kv-par-merge-sort-rs"

[profile]
dev = { opt-level = 2 }
release = { lto = "thin" }
bench = { lto = "thin" }

[dependencies]
bytemuck = "1.9"
crossbeam-channel = "0.5"
log = "0.4"
tempfile = "3.3"
tracing = "0.1"

[dev-dependencies]
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
rand = { version = "0.8", features = ["small_rng"] }
tracing-chrome = "0.6"
tracing-subscriber = "0.3"
